test(kwtruco): add unit test (Should not raise if player has only one strong card) for kwtrucoTest class